Update and rename ga4_d1.html to lena_d1.html

--- a/lena_d1.html
+++ b/lena_d1.html
@@ -26,7 +26,7 @@
                 'value': 1
             });
             
-            location.href='ga4_d2.html';
+            location.href='lena_d2.html';
         }
     </script>
 </head>
@@ -35,9 +35,9 @@
   <nav>
     <ul>
       <li><a href="./index.html">HOME</a></li>
-      <li><a href="./ga4_d1.html">가입안내</a></li>
-      <li><a href="./ga4_d2.html">회원가입</a></li>
-      <li><a href="./ga4_d3.html">물품구입</a></li>
+      <li><a href="./lena_d1.html">가입안내</a></li>
+      <li><a href="./lena_D2.html">회원가입</a></li>
+      <li><a href="./lena_d3.html">물품구입</a></li>
     </ul>
   </nav>
   
@@ -57,4 +57,5 @@
   </article>
 </body>
 </html>
+
 
