Update and rename ga4_d3.html to lena_d3.html

--- a/lena_d3.html
+++ b/lena_d3.html
@@ -22,9 +22,9 @@
   <nav>
     <ul>
       <li><a href="./index.html">HOME</a></li>
-      <li><a href="./ga4_d1.html">가입안내</a></li>
-      <li><a href="./ga4_d2.html">회원가입</a></li>
-      <li><a href="./ga4_d3.html">물품구입</a></li>
+      <li><a href="./lena_d1.html">가입안내</a></li>
+      <li><a href="./lena_d2.html">회원가입</a></li>
+      <li><a href="./lena_d3.html">물품구입</a></li>
     </ul>
   </nav>
   <article>
@@ -38,7 +38,7 @@
 
     <script>
         function addToCart() {
-            // GA4 이벤트 트래킹 코드
+            // lena3212-stack 이벤트 트래킹 코드
             gtag('event', 'add_to_cart', {
                 currency: 'KRW',
                 value: 6000,
@@ -56,4 +56,5 @@
   </article>
 </body>
 </html>
+
 
