--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   gtag('config', 'G-PQ2F0JFH26');
 </script>
 
-    <title>GA4 Example for Github</title>
+    <title>lena3212-stack Example for Github</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 
     <style>
